Layed out the grid

--- a/index.html
+++ b/index.html
@@ -6,7 +6,42 @@
     <title>Library</title>
     <link rel="stylesheet" href="./dist/output.css" />
   </head>
-  <body>
-    <h1 class="text-center text-4xl">Hello</h1>
+  <body class="bg-blue-100">
+    <div class="h-full">
+      <div class="max-w-5xl bg-white p-20 my-20 rounded-3xl mx-auto">
+        <h1 class="text-center text-3xl font-bold">Library</h1>
+        <table class="my-10 w-full table-auto border-spacing-44">
+          <thead>
+            <tr>
+              <th>Title</th>
+              <th>Author</th>
+              <th>Pages</th>
+              <th>Read</th>
+              <th>del</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="title">Harry Potter</td>
+              <td class="author">JK</td>
+              <td class="pages">400</td>
+              <td class="read">True</td>
+              <td><button>x</button></td>
+            </tr>
+            <tr>
+              <td class="title">Harry Potter</td>
+              <td class="author">JK</td>
+              <td class="pages">400</td>
+              <td class="read">True</td>
+              <td><button>x</button></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+    <script>
+      const myLibrary = [];
+    </script>
   </body>
 </html>
