reduced padding in mobile

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="bg-blue-100">
     <div class="h-full">
-      <div class="max-w-5xl bg-white p-20 my-20 rounded-3xl mx-auto">
+      <div class="max-w-5xl bg-white p-4 md:p-20 my-20 rounded-3xl mx-auto">
         <div class="flex justify-between">
           <h1 class="text-center text-3xl font-bold">Library</h1>
           <button
@@ -18,7 +18,7 @@
             Add new book
           </button>
         </div>
-        <table class="my-10 w-full table-auto border-spacing-44">
+        <table class="my-10 w-full table-fixed border-spacing-44">
           <thead>
             <tr>
               <th>Title</th>
