cloned code to another file with classes

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       </div>
     </dialog>
 
+    <script src="src/index.js"></script>
     <script>
       const myLibrary = [];
       const showBtn = document.querySelector("#showBtn");
